apic-config/mail-server/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maildev
  namespace: development-mailserver
  labels:
    app: maildev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maildev
  template:
    metadata:
      labels:
        app: maildev
    spec:
      containers:
      - name: maildev
        # Todo: Use stable
        image: maildev/maildev:2.1.0
        args: ["-s", "1025", "-w", "1080"]
